<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/planetSketchView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black" >

    <!-- planets -->

    <RelativeLayout
        android:id="@+id/redSketchPlanet"
        style="@style/sketchPlanetView"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/red_planet"
        >

        <TextView
            android:id="@+id/redSketchText"
            style="@style/sketchPlanetViewText"
            android:text="@string/red" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/blueSketchPlanet"
        style="@style/sketchPlanetView"
        android:layout_marginLeft="425dp"
        android:layout_marginTop="10dp" 
        android:background="@drawable/blue_planet"
        >

        <TextView
            android:id="@+id/blueSketchText"
            style="@style/sketchPlanetViewText"
            android:text="@string/blue" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/yellowSketchPlanet"
        style="@style/sketchPlanetView"
        android:layout_marginLeft="600dp"
        android:layout_marginTop="10dp" 
        android:background="@drawable/yellow_planet"
        >

        <TextView
            android:id="@+id/yellowSketchText"
            style="@style/sketchPlanetViewText"
            android:textColor="@color/Black"
            android:text="@string/yellow" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/greenSketchPlanet"
        style="@style/sketchPlanetView"
        android:layout_marginLeft="775dp"
        android:layout_marginTop="10dp" 
        android:background="@drawable/green_planet"
        >

        <TextView
            android:id="@+id/greenSketchText"
            style="@style/sketchPlanetViewText"
            android:text="@string/green" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/whiteSketchPlanet"
        style="@style/sketchPlanetView"
        android:layout_marginLeft="950dp"
        android:layout_marginTop="10dp" 
        android:background="@drawable/white_planet"
        >

        <TextView
            android:id="@+id/whiteSketchText"
            style="@style/sketchPlanetViewText"
            android:text="@string/white" 
            android:textColor="@color/Black"
            
            />
    </RelativeLayout>

    
    <RelativeLayout
        android:id="@+id/brownSketchPlanet"
        style="@style/sketchPlanetView"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="250dp" 
        android:background="@drawable/brown_planet"
        >

        <TextView
            android:id="@+id/brownSketchText"
            style="@style/sketchPlanetViewText"
            android:text="@string/brown" 
            
            
            />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/orangeSketchPlanet"
        style="@style/sketchPlanetView"
        android:layout_marginLeft="425dp"
        android:layout_marginTop="250dp" 
        android:background="@drawable/orange_planet"
        >

        <TextView
            android:id="@+id/orangeSketchText"
            style="@style/sketchPlanetViewText"
            android:textColor="@color/White"
            android:text="@string/orange" />
    </RelativeLayout>
	
     <RelativeLayout
        android:id="@+id/graySketchPlanet"
        style="@style/sketchPlanetView"
        android:layout_marginLeft="600dp"
        android:layout_marginTop="250dp" 
        android:background="@drawable/gray_planet"
        >

        <TextView
            android:id="@+id/graySketchText"
            style="@style/sketchPlanetViewText"
            android:textColor="@color/Black"
            android:text="@string/gray" />
    </RelativeLayout>
    
     <RelativeLayout
        android:id="@+id/purpleSketchPlanet"
        style="@style/sketchPlanetView"
        android:layout_marginLeft="775dp"
        android:layout_marginTop="250dp" 
        android:background="@drawable/purple_planet"
        >

        <TextView
            android:id="@+id/purpleSketchText"
            style="@style/sketchPlanetViewText"
            android:text="@string/purple" />
    </RelativeLayout>
     

    <!-- labels -->

    <RelativeLayout
        android:id="@+id/mercurySketchLabel"
        style="@style/sketchPlanetTextLabelStyle"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" >

        <TextView
            style="@style/SketchTextStyle"
            android:text="@string/mercury" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/venusSketchLabel"
        style="@style/sketchPlanetTextLabelStyle"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="70dp" >

        <TextView
            style="@style/SketchTextStyle"
            android:text="@string/venus" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/plutoSketchLabel"
        style="@style/sketchPlanetTextLabelStyle"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="130dp" >

        <TextView
            style="@style/SketchTextStyle"
            android:text="@string/pluto" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/neptune_sketchLabel"
        style="@style/sketchPlanetTextLabelStyle"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="190dp" >

        <TextView
            style="@style/SketchTextStyle"
            android:text="@string/neptune" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/uranusSketchLabel"
        style="@style/sketchPlanetTextLabelStyle"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="250dp" >

        <TextView
            style="@style/SketchTextStyle"
            android:text="@string/uranus" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/jupiterSketchLabel"
        style="@style/sketchPlanetTextLabelStyle"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="310dp" >

        <TextView
            style="@style/SketchTextStyle"
            android:text="@string/jupiter" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/marsSketchLabel"
        style="@style/sketchPlanetTextLabelStyle"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="370dp" >

        <TextView
            style="@style/SketchTextStyle"
            android:text="@string/mars" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/earthSketchLabel"
        style="@style/sketchPlanetTextLabelStyle"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="430dp" >

        <TextView
            style="@style/SketchTextStyle"
            android:text="@string/earth" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/saturnSketchLabel"
        style="@style/sketchPlanetTextLabelStyle"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="490dp" >

        <TextView
            style="@style/SketchTextStyle"
            android:text="@string/saturn" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/editSketchLabel"
        style="@style/sketchPlanetTextLabelStyle"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="550dp" >

        <EditText
            android:id="@+id/sketchEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:textSize="25sp" 
            android:maxLength="8"
            >

            <requestFocus />
        </EditText>
    </RelativeLayout>

</FrameLayout>