<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="fill"
    android:alignmentMode="alignBounds"
    android:background="@color/Black"
    android:columnCount="6"
    android:fitsSystemWindows="false"
    android:orientation="horizontal"
    android:padding="0dp"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:rowCount="21"
    android:rowOrderPreserved="false"
    android:useDefaultMargins="false" >

    <!-- Beginning spacers -->


    <!-- ver space -->

    <Space
        android:layout_width="1dp"
        android:layout_column="0"
        android:layout_gravity="fill_vertical"
        android:layout_row="0" />

    <!-- Titles -->
    <!-- Planets -->

    <Space
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <!-- Theories -->


    <!-- ver space -->

    <Space
        android:layout_width="1dp"
        android:layout_column="2"
        android:layout_gravity="fill_vertical"
        android:layout_row="0" />

    <!-- hor space -->

    <Space
        android:layout_height="1dp"
        android:layout_column="3"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <!-- Colors -->

    <Space
        android:layout_height="1dp"
        android:layout_column="4"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <!-- ver space -->

    <Space
        android:layout_width="1dp"
        android:layout_column="4"
        android:layout_gravity="fill_vertical"
        android:layout_row="0" />

    <!--
           <RelativeLayout
          android:id="@+id/ColorsView"
          style="@style/theoryPlanetHeaderLabel"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:layout_column="5"
          android:layout_gravity="fill"
          android:layout_row="1"
          android:layout_rowSpan="20"
          android:background="@color/PlanetTheoryCircleAreaColor"
          android:gravity="center"
          android:paddingRight="0dp"
          
           >
    -->

    <include
        android:id="@+id/colors_include"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_column="5"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:layout_rowSpan="20"
        layout="@layout/colors_layout"
        android:background="@color/PlanetTheoryCircleAreaColor"
        android:gravity="center"
        android:paddingRight="0dp" />

    <!-- </RelativeLayout> -->


    <!--
         <TextView
        style="@style/theoryPlanetHeaderLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_column="5"
        android:layout_gravity="fill"
        android:layout_row="1"
        android:layout_rowSpan="20"
        android:background="@color/PlanetTheoryCircleAreaColor"
        android:gravity="center"
        android:paddingRight="0dp"
        android:text="@string/colors" />
    -->


    <!-- Planet rows -->

    <Space
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_row="2" />

    <TextView
        style="@style/theoryPlanetLabel"
        android:layout_width="97dp"
        android:layout_column="1"
        android:layout_row="3"
        android:text="@string/mercury" />

    <Space
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_row="4" />

    <TextView
        style="@style/theoryPlanetLabel"
        android:layout_column="1"
        android:layout_row="5"
        android:text="@string/venus" />

    <Space
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_row="6" />

    <TextView
        style="@style/theoryPlanetLabel"
        android:layout_column="1"
        android:layout_row="7"
        android:text="@string/earth" />

    <Space
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_row="8" />

    <TextView
        style="@style/theoryPlanetLabel"
        android:layout_column="1"
        android:layout_row="9"
        android:text="@string/mars" />

    <Space
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_row="10" />

    <TextView
        style="@style/theoryPlanetLabel"
        android:layout_column="1"
        android:layout_row="11"
        android:text="@string/jupiter" />

    <Space
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_row="12" />

    <TextView
        style="@style/theoryPlanetLabel"
        android:layout_column="1"
        android:layout_row="13"
        android:text="@string/saturn" />

    <Space
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_row="14" />

    <TextView
        style="@style/theoryPlanetLabel"
        android:layout_column="1"
        android:layout_row="15"
        android:text="@string/uranus" />

    <Space
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_row="16" />

    <TextView
        style="@style/theoryPlanetLabel"
        android:layout_column="1"
        android:layout_row="17"
        android:text="@string/neptune" />

    <!--
         <Space
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_row="20" />
    -->


    <!-- views -->

    <View
        android:id="@+id/mercuryView"
        style="@style/theoryPlanetTableGridStyle"
        
        android:layout_column="3"
        android:layout_row="3" />

    <View
        android:id="@+id/venusView"
        style="@style/theoryPlanetTableGridStyle"
        android:layout_column="3"
        android:layout_row="5" />

    <LinearLayout
        android:id="@+id/earthView"
        style="@style/theoryPlanetTableGridStyle"
        android:layout_column="3"
        android:layout_row="7"
        android:gravity="center_vertical"
        android:padding="1dp"
		 />

    <View
        android:id="@+id/marsView"
        style="@style/theoryPlanetTableGridStyle"
        android:layout_column="3"
        android:layout_row="9" />

    <View
        android:id="@+id/jupiterView"
        style="@style/theoryPlanetTableGridStyle"
        android:layout_column="3"
        android:layout_row="11" />

    <View
        android:id="@+id/saturnView"
        style="@style/theoryPlanetTableGridStyle"
        android:layout_column="3"
        android:layout_row="13" />

    <View
        android:id="@+id/uranusView"
        style="@style/theoryPlanetTableGridStyle"
        android:layout_column="3"
        android:layout_row="15" />

    <View
        android:id="@+id/neptuneView"
        style="@style/theoryPlanetTableGridStyle"
        android:layout_column="3"
        android:layout_row="17" />

</GridLayout>